# wishlist-tg-bot

./: .env  exceptions.py  main.py  pyproject.toml
api/: alembic.ini  docker-compose.yaml  main.py  pyproject.toml
api/database/: crud.py  dto.py  models.py
api/database/migrations/versions/: 099f3e735e6c_.py  25051150aca0_.py  5c111c8e4c2a_.py  77a8baad8b14_.py  a96ae7dcf6eb_.py  aa64a6679833_.py  c0360ff49226_.py
database/: config.py  crud.py  db.py  dto.py  models.py
database/migrations/: env.py
database/migrations/versions/: 37d3f0ac4893_.py  3b250e5e2a18_.py  593f3858a067_.py  595692e09ea8_.py  963d05caa895_.py  a08be3fbd285_.py
